Updated some Bibtex entries

--- a/bibtex-repo.bib
+++ b/bibtex-repo.bib
@@ -24,156 +24,156 @@
   keywords  = {Flow Theory, Flow Velocity, Functions (Mathematics), Turbulent Flow, Algorithms, Average, Closures, Integral Equations, Navier-Stokes Equation, Numerical Integration, Probability Density Functions, Turbulence Models, Velocity Distribution},
 }
 
-@article{Adrian-1979-PhysOfFluids,
-	issn = {10706631},
-	journal = {Physics of Fluids},
-	pages = {2065--2070},
-	volume = {22},
-	number = {11},
-	year = {1979},
-	title = {Conditional eddies in isotropic turbulence},
-	copyright = {Copyright 2018 Elsevier B.V., All rights reserved.},
-	author = {Adrian, R.J.},
+@Article{Adrian_1979_PhysOfFluids,
+  author    = {Adrian, R. J.},
+  journal   = {Physics of Fluids},
+  title     = {Conditional eddies in isotropic turbulence},
+  year      = {1979},
+  issn      = {10706631},
+  number    = {11},
+  pages     = {2065--2070},
+  volume    = {22},
+  copyright = {Copyright 2018 Elsevier B.V., All rights reserved.},
 }
 
-@article{Adrian-2000-JFM,
-	author={R. J. Adrian and C. D. Meinhart and C. D. Tomkins},
-	year={2000},
-	title={Vortex organization in the outer region of the turbulent boundary layer},
-	journal={Journal of Fluid Mechanics},
-	volume={422},
-	pages={1-54},
-	url={http://dx.doi.org.proxy.library.nd.edu/10.1017/S0022112000001580}
+@Article{Adrian_2000_JFM,
+  author  = {R. J. Adrian and C. D. Meinhart and C. D. Tomkins},
+  journal = {Journal of Fluid Mechanics},
+  title   = {Vortex organization in the outer region of the turbulent boundary layer},
+  year    = {2000},
+  pages   = {1-54},
+  volume  = {422},
+  url     = {http://dx.doi.org.proxy.library.nd.edu/10.1017/S0022112000001580},
 }
 
-@article{Anderson-1969-PhysOfFluids,
-	issn = "0031-9171",
-	journal = "Physics of Fluids",
-	pages = "I-57--I-60",
-	volume = "12",
-	publisher = "American Institute of Physics",
-	number = "5",
-	year = "1969",
-	title = "Experimental Determination of the Gladstone-Dale Constants for Dissociating Oxygen",
-	language = "eng",
-	author = "Anderson, J. H. B.",
-	keywords = "Part III. Research Papers",
-	month = "May",
+@Article{Anderson_1969_PhysOfFluids,
+  author    = {Anderson, J. H. B.},
+  journal   = {Physics of Fluids},
+  title     = {{Experimental Determination of the Gladstone-Dale Constants for Dissociating Oxygen}},
+  year      = {1969},
+  issn      = {0031-9171},
+  month     = {May},
+  number    = {5},
+  pages     = {I-57--I-60},
+  volume    = {12},
+  keywords  = {Part III. Research Papers},
+  language  = {eng},
+  publisher = {American Institute of Physics},
 }
 
-@misc{ATA-2019-Web,
-	title = {Beam Control Subsystems: Advanced Line-of-Site Stabilization (LOSS) and Beam Control},
-	howpublished = {\url{http://www.atacorp.com/beam_control_subsystems.html}},
-	note = {Accessed: 2019-03-37}
+@Misc{ATA_2019_Web,
+  howpublished = {\url{http://www.atacorp.com/beam_control_subsystems.html}},
+  note         = {Accessed: 2019-03-37},
+  title        = {Beam Control Subsystems: Advanced Line-of-Site Stabilization (LOSS) and Beam Control},
 }
 
-@article{Brown-Roshko-1974-JFM,
-number = {4},
-year = {1974},
-title = {On density effects and large structure in turbulent mixing layers},
-language = {eng},
-author = {Brown, Garry L. and Roshko, Anatol},
-keywords = {Engineering ; Applied Sciences ; Physics;},
-issn = {0022-1120},
-abstract = {Plane turbulent mixing between two streams of different gases (especially nitrogen and helium) was studied in a novel apparatus. Spark shadow pictures showed that, for all ratios of densities in the two streams, the mixing layer is dominated by large coherent structures. High-speed movies showed that these convect at nearly constant speed, and increase their size and spacing discontinuously by amalgamation with neighbouring ones. The pictures and measurements of density fluctuations suggest that turbulent mixing and entrainment is a process of entanglement on the scale of the large structures; some statistical properties of the latter are used to obtain an estimate of entrainment rates. Large changes of the density ratio across the mixing layer were found to have a relatively small effect on the spreading angle; it is concluded that the strong effects, which are observed when one stream is supersonic, are due to compressibility effects, not density effects, as has been generally supposed.},
-journal = {Journal of Fluid Mechanics},
-pages = {775--816},
-volume = {64},
+@Article{Brown_Roshko_1974_JFM,
+  author   = {Brown, Garry L. and Roshko, Anatol},
+  journal  = {Journal of Fluid Mechanics},
+  title    = {On density effects and large structure in turbulent mixing layers},
+  year     = {1974},
+  issn     = {0022-1120},
+  number   = {4},
+  pages    = {775--816},
+  volume   = {64},
+  abstract = {Plane turbulent mixing between two streams of different gases (especially nitrogen and helium) was studied in a novel apparatus. Spark shadow pictures showed that, for all ratios of densities in the two streams, the mixing layer is dominated by large coherent structures. High-speed movies showed that these convect at nearly constant speed, and increase their size and spacing discontinuously by amalgamation with neighbouring ones. The pictures and measurements of density fluctuations suggest that turbulent mixing and entrainment is a process of entanglement on the scale of the large structures; some statistical properties of the latter are used to obtain an estimate of entrainment rates. Large changes of the density ratio across the mixing layer were found to have a relatively small effect on the spreading angle; it is concluded that the strong effects, which are observed when one stream is supersonic, are due to compressibility effects, not density effects, as has been generally supposed.},
+  keywords = {Engineering ; Applied Sciences ; Physics;},
+  language = {eng},
 }
 
-@inproceedings{Burns-2015-Kissimme,
-	author={William R. Burns and Eric J. Jumper and Stanislav Gordeyev},
-	title={A Latency-Tolerant Architecture for Airborne Adaptive Optic Systems},
-	year={2015},
-	eventdate={5 - 9 Jan 2015},
-	booktitle= {53th AIAA Aerospace Sciences Meeting},
-	location={Kissimmee, Florida},
-	note={AIAA Paper 2015-0679},
+@InProceedings{Burns_2015_Kissimme,
+  author    = {William R. Burns and Eric J. Jumper and Stanislav Gordeyev},
+  booktitle = {53th AIAA Aerospace Sciences Meeting},
+  title     = {{A Latency-Tolerant Architecture for Airborne Adaptive Optic Systems}},
+  year      = {2015},
+  note      = {AIAA Paper 2015-0679},
+  eventdate = {5 - 9 Jan 2015},
+  location  = {Kissimmee, Florida},
 }
 
-@misc{Burns-2016-Dissertation,
-	author={W. Robert Burns},
-	year={2016},
-	title={Statistical Learning Methods for Aero-Optic Wavefront Prediction and Adaptive-Optic Latency Compensation}
+@PhdThesis{Burns_2016_Dissertation,
+  author = {W. Robert Burns},
+  title  = {{Statistical Learning Methods for Aero-Optic Wavefront Prediction and Adaptive-Optic Latency Compensation}},
+  year   = {2016},
 }
 
-@inproceedings{Cress-2010-Orlando,
-	author={Jacob A. Cress and Stanislav Gordeyev and  Eric J. Jumper},
-	title={Aero-Optical Measurements in a Heated, Subsonic, Turbulent Boundary Layer},
-	year={2010},
-	eventdate={4-7 Jan, 2010},
-	booktitle= {48th Aerospace Science Meeting and Exhibit},
-	location={Orlando, Florida},
-	note={AIAA Paper 2010-0434},
+@InProceedings{Cress_2010_Orlando,
+  author    = {Jacob A. Cress and Stanislav Gordeyev and Eric J. Jumper},
+  booktitle = {48th Aerospace Science Meeting and Exhibit},
+  title     = {{Aero-Optical Measurements in a Heated, Subsonic, Turbulent Boundary Layer}},
+  year      = {2010},
+  note      = {AIAA Paper 2010-0434},
+  eventdate = {4-7 Jan, 2010},
+  location  = {Orlando, Florida},
 }
 
-@misc{Cress-2010-Dissertation,
-	author={Jacob A. Cress},
-	year={2010},
-	title={Optical Aberrations Caused by Coherent Structures in a Subsonic, Compressible, Turbulent Boundary Layer}
+@PhdThesis{Cress_2010_Dissertation,
+  author = {Jacob A. Cress},
+  title  = {{Optical Aberrations Caused by Coherent Structures in a Subsonic, Compressible, Turbulent Boundary Layer}},
+  year   = {2010},
 }
 
-@misc{DeLucca-2016-Dissertation,
-	author={Nicholas Giovanni De Lucca},
-	year={2016},
-	title={Studies of the Pressure Field and Related Beam Jitter for Hemisphere-on-Cylinder Turrets}
+@PhdThesis{DeLucca_2016_Dissertation,
+  author = {Nicholas Giovanni {De Lucca}},
+  title  = {{Studies of the Pressure Field and Related Beam Jitter for Hemisphere-on-Cylinder Turrets}},
+  year   = {2016},
 }
 
-@inproceedings{DeLucca-2012-Nashville,
-	author={Nicholas De Lucca and Stanislav Gordeyev and Eric Jumper},
-	year={2012},
-	month={01/09; 2016/01},
-	title={The Study of Aero-Optical and Mechanical Jitter for Flat Window Turrets},
-	series={Aerospace Sciences Meetings},
-	publisher={American Institute of Aeronautics and Astronautics},
-	note={05; M1: 0; doi:10.2514/6.2012-623},
-	url={http://dx.doi.org/10.2514/6.2012-623}
+@InProceedings{DeLucca_2012_Nashville,
+  author    = {Nicholas {De Lucca} and Stanislav Gordeyev and Eric Jumper},
+  title     = {{The Study of Aero-Optical and Mechanical Jitter for Flat Window Turrets}},
+  year      = {2012},
+  month     = {01/09; 2016/01},
+  note      = {05; M1: 0; doi:10.2514/6.2012-623},
+  publisher = {American Institute of Aeronautics and Astronautics},
+  series    = {Aerospace Sciences Meetings},
+  url       = {http://dx.doi.org/10.2514/6.2012-623},
 }
 
-@article{Dennis-2008-JFM,
-	author={David J. C. Dennis and Timothy B. Nickels},
-	year={2008},
-	title={On the limitations of Taylor's hypothesis in constructing long structures in a turbulent boundary layer},
-	journal={Journal of Fluid Mechanics},
-	volume={614},
-	pages={197-206},
-	url={http://dx.doi.org.proxy.library.nd.edu/10.1017/S0022112008003352}
+@Article{Dennis_2008_JFM,
+  author  = {David J. C. Dennis and Timothy B. Nickels},
+  journal = {Journal of Fluid Mechanics},
+  title   = {{On the limitations of Taylor's hypothesis in constructing long structures in a turbulent boundary layer}},
+  year    = {2008},
+  pages   = {197-206},
+  volume  = {614},
+  url     = {http://dx.doi.org.proxy.library.nd.edu/10.1017/S0022112008003352},
 }
 
-@article{Dennis-2011-JFM_part1,
-	author={David J. C. Dennis and Timothy B. Nickels},
-	year={2011},
-	title={Experimental measurement of large-scale three-dimensional structures in a turbulent boundary layer. Part 1. Vortex packets},
-	journal={Journal of Fluid Mechanics},
-	volume={673},
-	pages={180-217},
-	url={http://dx.doi.org.proxy.library.nd.edu/10.1017/S0022112010006324}
+@Article{Dennis_2011_JFM_part1,
+  author  = {David J. C. Dennis and Timothy B. Nickels},
+  journal = {Journal of Fluid Mechanics},
+  title   = {{Experimental measurement of large-scale three-dimensional structures in a turbulent boundary layer. Part 1. Vortex packets}},
+  year    = {2011},
+  pages   = {180-217},
+  volume  = {673},
+  url     = {http://dx.doi.org.proxy.library.nd.edu/10.1017/S0022112010006324},
 }
 
-@article{Dennis-2011-JFM_part2,
-	issn = {0022-1120},
-	abstract = {Three-dimensional (3D) measurements of a turbulent boundary layer have been made using high-speed particle image velocimetry (PIV) coupled with Taylor's hypothesis, with the objective of characterising the very long streamwise structures that have been observed previously. The measurements show the 3D character of both low- and high-speed structures over very long volumes. The statistics of these structures are considered, as is their relationship to the important turbulence quantities. In particular, the length of the structures and their wall-normal extent have been considered and their relationship to the other components of the velocity fluctuations and the instantaneous stress.},
-	journal = {Journal of Fluid Mechanics},
-	pages = {218--244},
-	volume = {673},
-	publisher = {Cambridge University Press},
-	year = {2011},
-	title = {Experimental measurement of large-scale three-dimensional structures in a turbulent boundary layer. Part 2. Long structures},
-	author = {DENNIS, DAVID J. C and NICKELS, TIMOTHY B},
-	keywords = {Boundary Layers; Boundary Layer Structure; Turbulent Boundary Layers},
+@Article{Dennis_2011_JFM_part2,
+  author    = {Dennis, David J. C. and Nickels, Timothy B.},
+  journal   = {Journal of Fluid Mechanics},
+  title     = {{Experimental measurement of large-scale three-dimensional structures in a turbulent boundary layer. Part 2. Long structures}},
+  year      = {2011},
+  issn      = {0022-1120},
+  pages     = {218--244},
+  volume    = {673},
+  abstract  = {Three-dimensional (3D) measurements of a turbulent boundary layer have been made using high-speed particle image velocimetry (PIV) coupled with Taylor's hypothesis, with the objective of characterising the very long streamwise structures that have been observed previously. The measurements show the 3D character of both low- and high-speed structures over very long volumes. The statistics of these structures are considered, as is their relationship to the important turbulence quantities. In particular, the length of the structures and their wall-normal extent have been considered and their relationship to the other components of the velocity fluctuations and the instantaneous stress.},
+  keywords  = {Boundary Layers; Boundary Layer Structure; Turbulent Boundary Layers},
+  publisher = {Cambridge University Press},
 }
 
-@article{Dimotakis-1986-AIAAJournal,
-number = {11},
-year = {1986},
-title = {Two-dimensional shear-layer entrainment},
-language = {eng},
-author = {Dimotakis, Paul E},
-keywords = {Engineering;},
-issn = {0001-1452},
-journal = {AIAA Journal},
-pages = {1791--1796},
-volume = {24},
+@Article{Dimotakis_1986_AIAAJournal,
+  author   = {Dimotakis, Paul E.},
+  journal  = {AIAA Journal},
+  title    = {Two-dimensional shear-layer entrainment},
+  year     = {1986},
+  issn     = {0001-1452},
+  number   = {11},
+  pages    = {1791--1796},
+  volume   = {24},
+  keywords = {Engineering;},
+  language = {eng},
 }
 
 @misc{Duffin-2009-Thesis,
@@ -346,15 +346,13 @@ year={2014},
 	eprint = {https://arc.aiaa.org/doi/pdf/10.2514/6.2013-717}
 }
 
-
-
-@article{Gordeyev-2014-ExpInFluids,
-	author={Stanislav Gordeyev and Nicholas De Lucca and Eric J. Jumper and Kyle Hird and Thomas J. Juliano and James W. Gregory and James Thordahl and Donald J. Wittich},
-	year={2014},
-	title={ Comparison of Unsteady Pressure Fields on Turrets with Different Surface Features using Pressure Sensitive Paint },
-	journal={Experiments in Fluids},
-	volume={55},
-	pages={1661},
+@Article{Gordeyev-2014-ExpInFluids,
+  author  = {Stanislav Gordeyev and Nicholas {De Lucca} and Eric J. Jumper and Kyle Hird and Thomas J. Juliano and James W. Gregory and James Thordahl and Donald J. Wittich},
+  journal = {Experiments in Fluids},
+  title   = {Comparison of Unsteady Pressure Fields on Turrets with Different Surface Features using Pressure Sensitive Paint},
+  year    = {2014},
+  pages   = {1661},
+  volume  = {55},
 }
 
 @article{Gordeyev-2014-JFM,
@@ -721,20 +719,20 @@ publisher = {Addison-Wesley},
 	title={Numerical and Theoretical Analysis of Aero-Optics with Application to an Optical Turret}
 }
 
-@article{Morrida-2017-ApplOpt,
-	author = {Jacob Morrida and Stanislav Gordeyev and Nicholas De Lucca and Eric J. Jumper},
-	journal = {Applied Optics},
-	keywords = {Laser beam transmission; Turbulence; Wave-front sensing; Flow diagnostics; Turbulence; Laser beams; Laser induced fluorescence; Position sensing; Spatial resolution; Temporal resolution; Wavefronts},
-	number = {16},
-	pages = {4814--4824},
-	publisher = {OSA},
-	title = {Shock-related effects on aero-optical environment for hemisphere-on-cylinder turrets at transonic speeds},
-	volume = {56},
-	month = {Jun},
-	year = {2017},
-	url = {http://ao.osa.org/abstract.cfm?URI=ao-56-16-4814},
-	doi = {10.1364/AO.56.004814},
-	abstract = {The aero-optical environment around a hemisphere-on-cylinder turret with both flat and conformal windows was studied experimentally in flight using the Airborne Aero-Optical Laboratory-Transonic for a range of subsonic and transonic Mach numbers between 0.5 and 0.8. Above M$=$0.6, the local shock appeared near the top of the turret, causing additional aero-optical distortions at side-looking angles. Using time-resolved wavefronts, instantaneous shock locations were extracted and analyzed. The mean shock location was found to be near a viewing angle, \&\#x03B1;$=$80\&\#x2009;\&\#x2009;deg for both window types at M$=$0.7 and 0.8. For M$=$0.8, the shock has a single frequency peak at StD$=$0.15, the same as for the unsteady separation line, indicating a lock-in mechanism between the shock and the separated wake region. Analysis of aero-optical distortions in the wake indicated that the wake dynamics were beginning to be affected by the shock only at high transonic speed of M$=$0.8 for the conformal-window turret.},
+@Article{Morrida-2017-ApplOpt,
+  author    = {Jacob Morrida and Stanislav Gordeyev and Nicholas {De Lucca} and Eric J. Jumper},
+  journal   = {Applied Optics},
+  title     = {Shock-related effects on aero-optical environment for hemisphere-on-cylinder turrets at transonic speeds},
+  year      = {2017},
+  month     = {Jun},
+  number    = {16},
+  pages     = {4814--4824},
+  volume    = {56},
+  abstract  = {The aero-optical environment around a hemisphere-on-cylinder turret with both flat and conformal windows was studied experimentally in flight using the Airborne Aero-Optical Laboratory-Transonic for a range of subsonic and transonic Mach numbers between 0.5 and 0.8. Above M$=$0.6, the local shock appeared near the top of the turret, causing additional aero-optical distortions at side-looking angles. Using time-resolved wavefronts, instantaneous shock locations were extracted and analyzed. The mean shock location was found to be near a viewing angle, \&\#x03B1;$=$80\&\#x2009;\&\#x2009;deg for both window types at M$=$0.7 and 0.8. For M$=$0.8, the shock has a single frequency peak at StD$=$0.15, the same as for the unsteady separation line, indicating a lock-in mechanism between the shock and the separated wake region. Analysis of aero-optical distortions in the wake indicated that the wake dynamics were beginning to be affected by the shock only at high transonic speed of M$=$0.8 for the conformal-window turret.},
+  doi       = {10.1364/AO.56.004814},
+  keywords  = {Laser beam transmission; Turbulence; Wave-front sensing; Flow diagnostics; Turbulence; Laser beams; Laser induced fluorescence; Position sensing; Spatial resolution; Temporal resolution; Wavefronts},
+  publisher = {OSA},
+  url       = {http://ao.osa.org/abstract.cfm?URI=ao-56-16-4814},
 }
 
 @article{Nightingale-2009-AIAA,
@@ -892,16 +890,16 @@ volume = {197},
 	url={http://www.osapublishing.org/abstract.cfm?URI=josa-70-8-998}
 }
 
-@article{Squire-2017-JFM,
-	issn = {0022-1120},
-	abstract = {The spatial structure of smooth- and rough-wall boundary layers is examined spectrally at approximately matched friction Reynolds number ( $\unicode[STIX]{x1D6FF}^{+}\approx 12\,000$ ). For each wall condition, temporal and true spatial descriptions of the same flow are available from hot-wire anemometry and high-spatial-range particle image velocimetry, respectively. The results show that over the resolved flow domain, which is limited to a streamwise length of twice the boundary layer thickness, true spatial spectra of smooth-wall streamwise and wall-normal velocity fluctuations agree, to within experimental uncertainty, with those obtained from time series using Taylorâs frozen turbulence hypothesis ( Proc. R. Soc. Lond. A, vol. 164, 1938, pp. 476â490). The same applies for the streamwise velocity spectra on rough walls. For the wall-normal velocity spectra, however, clear differences are observed between the true spatial and temporally convected spectra. For the rough-wall spectra, a correction is derived to enable accurate prediction of wall-normal velocity length scales from measurements of their time scales, and the implications of this correction are considered. Potential violations to Taylorâs hypothesis in flows above perturbed walls may help to explain conflicting conclusions in the literature regarding the effect of near-wall modifications on outer-region flow. In this regard, all true spatial and corrected spectra presented here indicate structural similarity in the outer region of smooth- and rough-wall flows, providing evidence for Townsendâs wall-similarity hypothesis ( The Structure of Turbulent Shear Flow , vol. 1, 1956).},
-	pages = {398--417},
-	volume = {812},
-	publisher = {Cambridge University Press},
-	year = {2017},
-	title = {Applicability of Taylorâs hypothesis in rough- and smooth-wall boundary layers},
-	author = {Squire, D. T and Hutchins, N and Morrill-Winter, C and Schultz, M. P and Klewicki, J. C and Marusic, I},
-	keywords = {Papers; Boundary Layer Structure; Turbulent Flows},
+@Article{Squire-2017-JFM,
+  author    = {Squire, D. T. and Hutchins, N. and Morrill-Winter, C. and Schultz, M. P. and Klewicki, J. C. and Marusic, I.},
+  title     = {{Applicability of Taylor's hypothesis in rough- and smooth-wall boundary layers}},
+  year      = {2017},
+  issn      = {0022-1120},
+  pages     = {398--417},
+  volume    = {812},
+  abstract  = {The spatial structure of smooth- and rough-wall boundary layers is examined spectrally at approximately matched friction Reynolds number ( $\unicode[STIX]{x1D6FF}^{+}\approx 12\,000$ ). For each wall condition, temporal and true spatial descriptions of the same flow are available from hot-wire anemometry and high-spatial-range particle image velocimetry, respectively. The results show that over the resolved flow domain, which is limited to a streamwise length of twice the boundary layer thickness, true spatial spectra of smooth-wall streamwise and wall-normal velocity fluctuations agree, to within experimental uncertainty, with those obtained from time series using Taylorâs frozen turbulence hypothesis ( Proc. R. Soc. Lond. A, vol. 164, 1938, pp. 476â490). The same applies for the streamwise velocity spectra on rough walls. For the wall-normal velocity spectra, however, clear differences are observed between the true spatial and temporally convected spectra. For the rough-wall spectra, a correction is derived to enable accurate prediction of wall-normal velocity length scales from measurements of their time scales, and the implications of this correction are considered. Potential violations to Taylorâs hypothesis in flows above perturbed walls may help to explain conflicting conclusions in the literature regarding the effect of near-wall modifications on outer-region flow. In this regard, all true spatial and corrected spectra presented here indicate structural similarity in the outer region of smooth- and rough-wall flows, providing evidence for Townsendâs wall-similarity hypothesis ( The Structure of Turbulent Shear Flow , vol. 1, 1956).},
+  keywords  = {Papers; Boundary Layer Structure; Turbulent Flows},
+  publisher = {Cambridge University Press},
 }
 
 @misc{Steinmetz-1980-NASA,
