fixed some reference entries

--- a/bibtex-repo.bib
+++ b/bibtex-repo.bib
@@ -86,7 +86,8 @@
   booktitle = {53th AIAA Aerospace Sciences Meeting},
   title     = {{A Latency-Tolerant Architecture for Airborne Adaptive Optic Systems}},
   year      = {2015},
-  note      = {AIAA Paper 2015-0679},
+  volume    = {AIAA Paper 2015-0679},
+  doi       = {10.2514/6.2015-0679},
   eventdate = {5 - 9 Jan 2015},
   location  = {Kissimmee, Florida},
 }
