--- a/bibtex-repo.bib
+++ b/bibtex-repo.bib
@@ -94,6 +94,7 @@
 
 @PhdThesis{Burns_2016_Dissertation,
   author = {W. Robert Burns},
+  school = {University of Notre Dame},
   title  = {{Statistical Learning Methods for Aero-Optic Wavefront Prediction and Adaptive-Optic Latency Compensation}},
   year   = {2016},
 }
@@ -110,12 +111,14 @@
 
 @PhdThesis{Cress_2010_Dissertation,
   author = {Jacob A. Cress},
+  school = {University of Notre Dame},
   title  = {{Optical Aberrations Caused by Coherent Structures in a Subsonic, Compressible, Turbulent Boundary Layer}},
   year   = {2010},
 }
 
 @PhdThesis{DeLucca_2016_Dissertation,
   author = {Nicholas Giovanni {De Lucca}},
+  school = {University of Notre Dame},
   title  = {{Studies of the Pressure Field and Related Beam Jitter for Hemisphere-on-Cylinder Turrets}},
   year   = {2016},
 }
@@ -179,6 +182,7 @@
 
 @PhdThesis{Duffin_2009_Thesis,
   author   = {Duffin, Daniel A.},
+  school   = {University of Notre Dame},
   title    = {Feed-forward adaptive-optic correction of a weakly-compressible high-subsonic shear layer},
   year     = {2009},
   abstract = {Development of airborne laser systems began in the 1970s with the Airborne Laser Laboratory, a KC135 aircraft with a CO2 laser projected from a beam director mounted atop the aircraft as a hemispherical turret encased in a fairing. It was known that the turbulent air flowing around the turret and separating over the aft portions of the turret would aberrate the laser beam's wavefront (the aero-optic problem); however, the CO2 wavelength, 10.6 μm, was long enough that the aberrating turbulent flow decreased the system's performance by only about 5\%. With newer airborne laser systems using wavelengths nearer 1 μm, this same turbulent flow now reduces system performance by more than 95\%. It has long been known that if a conjugate waveform is used to pre-distort the outgoing laser's wavefront, the turbulence will actually correct the beam, restoring most of the system's performance. The problem with performing this compensation is that the system for performing this function, the so-called adaptive-optic system, is bandwidth limited in its conventional architecture, by orders of magnitude lower than that required to correct for the aero-optic effects. The research described in this dissertation explored changing the adaptive-optic paradigm from feedback to feed-forward by adding flow control to make the aberration environment predictable rather than unpredictable. This research demonstrated that the turbulent high-speed separated shear layer could be robustly forced into a regularized form. It was also shown that these regularized velocity patterns in the shear layer produced periodic optical aberrations. Extensive measurement and analysis of these convecting aberrations yielded the underlying structure required to produce the conjugate wavefront correction patterns required for a range of laser propagation angles through the shear layer. Ultimately, a feed-forward adaptive-optic system was developed and used to demonstrate the highest-bandwidth correction of aero-optic aberrations ever performed; the effective bandwidth of the demonstrated adaptive-optic correction was at least two orders of magnitude greater than the capabilities of existing conventional adaptive-optic systems.},
@@ -849,12 +853,12 @@ volume = {197},
 	publisher={American Institute of Aeronautics and Astronautics},
 }
 
-@phdthesis{Smith-2015-Thesis,
-	author={Adam E. Smith},
-	title={Evaluation of passive boundary layer flow control techniques for aero-optic mitigation},
-	school= {University of Notre Dame},
-	year= {2015},
-	note= {Doctoral Dissertation}
+@PhdThesis{Smith_2015_Thesis,
+  author = {Adam E. Smith},
+  school = {University of Notre Dame},
+  title  = {Evaluation of passive boundary layer flow control techniques for aero-optic mitigation},
+  year   = {2015},
+  note   = {Doctoral Dissertation},
 }
 
 @inproceedings{Smith-2012-NewOrleans,
