--- a/bibtex-repo.bib
+++ b/bibtex-repo.bib
@@ -1056,4 +1056,18 @@ volume = {197},
 	url={http://dx.doi.org.proxy.library.nd.edu/10.1017/S002211209900467X}
 }
 
+@Book{Sasiela_2007_WavePropBook,
+  author    = {Sasiela, Richard J.},
+  publisher = {SPIE},
+  title     = {Electromagnetic wave propagation in turbulence evaluation and application of Mellin transforms},
+  year      = {2007},
+  address   = {Bellingham, Wash. (1000 20th St. Bellingham WA 98225-6705 USA)},
+  edition   = {2nd ed..},
+  isbn      = {9780819478399},
+  series    = {SPIE monograph ; PM171},
+  abstract  = {At first glance, Mellin transforms can look formidable and complicated. With this book, Dr. Richard Sasiela invites readers to overcome these fears and see just how useful they can be. The book is aimed at two audiences: those interested in problems surrounding electromagnetic wave propagation in turbulence, and those interested in evaluating integrals. The author takes a systematic and in-depth approach to answering both audiences, separately and jointly, by demonstrating a way to obtain analytic answers, the integration method, and by developing a way to express solutions to electromagnetic wave propagation in turbulence problems in integral form. The book also demonstrates how Mellin transform techniques can be used to evaluate these integrals. This book touches on how Mellin transforms can be used in applications relating to image, radar, and acoustic processing, as well as chaos and fractal theory. The author has thoroughly updated this second edition and corrects some of his earlier work using new information and new technologies. He has also added new information on Strehl ratios and their different applications.},
+  keywords  = {Numerical calculations},
+  language  = {eng},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
