fix gladstone dale paper

--- a/bibtex-repo.bib
+++ b/bibtex-repo.bib
@@ -1,7 +1,7 @@
 % Encoding: UTF-8
 %
 % Matthew Kemnetz
-% 06 Jan 2020
+% 15 May 2020
 %
 
 @Misc{AdaptiveOpticSys-2017-web,
@@ -279,16 +279,18 @@ year={2014},
 }
 
 @article{GladstoneDale-1862-RoyalSocLondon,
- ISSN = {03701662},
- URL = {http://www.jstor.org/stable/112286},
+ ISSN = {02610523},
+ URL = {http://www.jstor.org/stable/108799},
  author = {J. H. Gladstone and T. P. Dale},
- journal = {Proceedings of the Royal Society of London},
- pages = {448-453},
+ journal = {Philosophical Transactions of the Royal Society of London},
+ number = {},
+ pages = {317--343},
  publisher = {The Royal Society},
  title = {Researches on the Refraction, Dispersion, and Sensitiveness of Liquids},
- volume = {12},
- year = {1862}
+ volume = {153},
+ year = {1863}
 }
+
 
 @book{Goodman-2005-book,
 	publisher = {Roberts and Co.},
