--- a/bibtex-repo.bib
+++ b/bibtex-repo.bib
@@ -403,12 +403,24 @@ year={2014},
 	url={http://scitation.aip.org/content/aip/journal/pof2/27/4/10.1063/1.4919331}
 }
 
-@inproceedings{Gordeyev-2016-DC,
-	author={Stanislav Gordeyev and Thomas J. Juliano},
+@inbook{Gordeyev-2016-SanDiego,
+	author = {Stanislav Gordeyev and Thomas J. Juliano},
 	year={2016},
-	title={Optical Characterization of Nozzle-Wall Mach-6 Boundary Layers},
+	title = {Optical Characterization of Nozzle-Wall Mach-6 Boundary Layers},
+	eventdate={4-8 January 2016},
+	booktitle = {54th AIAA Aerospace Sciences Meeting},
+	doi = {10.2514/6.2016-1586},
+	location={San Diego, California},
+	note={AIAA 2016-1586}
+}
+
+@inproceedings{Gordeyev-2016-DC,
+	author = {Stanislav Gordeyev and Thomas J. Juliano},
+	year={2016},
+	title = {Optical Measurements of Transitional Events in a Mach-6 Laminar Boundary Layer},
 	eventdate={13 -17 June 2016},
-	booktitle= {46th AIAA Fluid Dynamics Conference},
+	booktitle = {46th AIAA Fluid Dynamics Conference},
+	doi = {10.2514/6.2016-3348},
 	location={Washington, DC},
 	note={AIAA-2016-3348}
 }
@@ -549,14 +561,14 @@ publisher = {Addison-Wesley},
 }
 
 @article{Jacobi-2011-JFM,
-  author={Jacobi, I. and McKeon, B. J.},
-  title={Dynamic roughness perturbation of a turbulent boundary layer},
-  volume={688},
-  DOI={10.1017/jfm.2011.375},
-  journal={Journal of Fluid Mechanics},
-  publisher={Cambridge University Press},
-  year={2011},
-  pages={258–296}
+	author={Jacobi, I. and McKeon, B. J.},
+	title={Dynamic roughness perturbation of a turbulent boundary layer},
+	volume={688},
+	DOI={10.1017/jfm.2011.375},
+	journal={Journal of Fluid Mechanics},
+	publisher={Cambridge University Press},
+	year={2011},
+	pages={258–296}
 }
 
 @article{Jumper-2001-ProgressInAero,
@@ -856,12 +868,25 @@ volume = {197},
 }
 
 @PhdThesis{Smith_2015_Thesis,
-  author = {Adam E. Smith},
-  school = {University of Notre Dame},
-  title  = {Evaluation of passive boundary layer flow control techniques for aero-optic mitigation},
-  year   = {2015},
-  note   = {Doctoral Dissertation},
+	author = {Adam E. Smith},
+	school = {University of Notre Dame},
+	title  = {Evaluation of passive boundary layer flow control techniques for aero-optic mitigation},
+	year   = {2015},
+	note   = {Doctoral Dissertation},
 }
+
+
+@inbook{Smith_2014_Atlanta,
+	author = {Adam E. Smith and Stanislav Gordeyev and Hamza Ahmed and Anwar Ahmed and Donald J. Wittich},
+	title = {Shack-Hartmann Wavefront Measurements of Supersonic Turbulent Boundary Layers in the TGF},
+	booktitle = {45th AIAA Plasmadynamics and Lasers Conference},
+	chapter = {},
+	pages = {},
+	doi = {10.2514/6.2014-2493},
+	URL = {https://arc.aiaa.org/doi/abs/10.2514/6.2014-2493},
+	eprint = {https://arc.aiaa.org/doi/pdf/10.2514/6.2014-2493}
+}
+
 
 @inproceedings{Smith-2012-NewOrleans,
 	booktitle = {43rd AIAA Plasmadynamics and Lasers Conference 2012},
