changed an entry

--- a/bibtex-repo.bib
+++ b/bibtex-repo.bib
@@ -403,7 +403,7 @@ year={2014},
 	url={http://scitation.aip.org/content/aip/journal/pof2/27/4/10.1063/1.4919331}
 }
 
-@inbook{Gordeyev-2016-SanDiego,
+@inproceedings{Gordeyev-2016-SanDiego,
 	author = {Stanislav Gordeyev and Thomas J. Juliano},
 	year={2016},
 	title = {Optical Characterization of Nozzle-Wall Mach-6 Boundary Layers},
