--- a/bibtex-repo.bib
+++ b/bibtex-repo.bib
@@ -411,7 +411,7 @@ year={2014},
 	booktitle = {54th AIAA Aerospace Sciences Meeting},
 	doi = {10.2514/6.2016-1586},
 	location={San Diego, California},
-	note={AIAA 2016-1586}
+	note={ AIAA 2016-1586}
 }
 
 @inproceedings{Gordeyev-2016-DC,
@@ -876,15 +876,16 @@ volume = {197},
 }
 
 
-@inbook{Smith_2014_Atlanta,
+@inproceedings{Smith_2014_Atlanta,
 	author = {Adam E. Smith and Stanislav Gordeyev and Hamza Ahmed and Anwar Ahmed and Donald J. Wittich},
+	location = {Atlanta, Georgia},
+	yeah = {2014}
 	title = {Shack-Hartmann Wavefront Measurements of Supersonic Turbulent Boundary Layers in the TGF},
 	booktitle = {45th AIAA Plasmadynamics and Lasers Conference},
 	chapter = {},
 	pages = {},
 	doi = {10.2514/6.2014-2493},
-	URL = {https://arc.aiaa.org/doi/abs/10.2514/6.2014-2493},
-	eprint = {https://arc.aiaa.org/doi/pdf/10.2514/6.2014-2493}
+	note = {AIAA Paper 2014-2356},
 }
 
 
