fixed ANOTHER reference

--- a/bibtex-repo.bib
+++ b/bibtex-repo.bib
@@ -875,16 +875,16 @@ volume = {197},
 	note   = {Doctoral Dissertation},
 }
 
-
 @inproceedings{Smith_2014_Atlanta,
 	author = {Adam E. Smith and Stanislav Gordeyev and Hamza Ahmed and Anwar Ahmed and Donald J. Wittich},
-	location = {Atlanta, Georgia},
-	yeah = {2014}
+	yeah = {2014},
 	title = {Shack-Hartmann Wavefront Measurements of Supersonic Turbulent Boundary Layers in the TGF},
+	eventdate={16 - 20 June 2014},
 	booktitle = {45th AIAA Plasmadynamics and Lasers Conference},
 	chapter = {},
 	pages = {},
 	doi = {10.2514/6.2014-2493},
+	location = {Atlanta, Georgia},
 	note = {AIAA Paper 2014-2356},
 }
 
