year instead of yeah

--- a/bibtex-repo.bib
+++ b/bibtex-repo.bib
@@ -877,17 +877,14 @@ volume = {197},
 
 @inproceedings{Smith_2014_Atlanta,
 	author = {Adam E. Smith and Stanislav Gordeyev and Hamza Ahmed and Anwar Ahmed and Donald J. Wittich},
-	yeah = {2014},
+	year = {2014},
 	title = {Shack-Hartmann Wavefront Measurements of Supersonic Turbulent Boundary Layers in the TGF},
 	eventdate={16 - 20 June 2014},
 	booktitle = {45th AIAA Plasmadynamics and Lasers Conference},
-	chapter = {},
-	pages = {},
 	doi = {10.2514/6.2014-2493},
 	location = {Atlanta, Georgia},
 	note = {AIAA Paper 2014-2356},
 }
-
 
 @inproceedings{Smith-2012-NewOrleans,
 	booktitle = {43rd AIAA Plasmadynamics and Lasers Conference 2012},
