added stitching paper

--- a/bibtex-repo.bib
+++ b/bibtex-repo.bib
@@ -656,6 +656,19 @@ publisher = {Addison-Wesley},
 	title={Analysis of the Aero-Optical Component of the Jitter using the Stitching Method}
 }
 
+@article{Kemnetz-2022-AIAAJournal,
+	author = {Kemnetz, Matthew R. and Gordeyev, Stanislav},
+	title = {Analysis of Aero-Optical Jitter in Convective Turbulent Flows Using Stitching Method},
+	journal = {AIAA Journal},
+	volume = {60},
+	number = {1},
+	pages = {14-30},
+	year = {2022},
+	doi = {10.2514/1.J060756},
+	URL = {https://doi.org/10.2514/1.J060756},
+}
+
+
 @book{Klein-1986-Book,
 	publisher = {Wiley},
 	isbn = {0471872970},
