--- a/bibtex-repo.bib
+++ b/bibtex-repo.bib
@@ -1,7 +1,7 @@
 % Encoding: UTF-8
 %
 % Matthew Kemnetz
-% 21 Dec 2020
+% 26 Jan 2024
 %
 
 @Misc{AdaptiveOpticSys-2017-web,
@@ -61,6 +61,14 @@
   publisher = {American Institute of Physics},
 }
 
+@book{Anderson-2016-Book,
+    author = {John Anderson},
+    publisher = {McGraw Hill},
+    isbn = {9781259129919},
+    year = {2016},
+    title = {Fundamentals of Aerodynamics},
+}
+
 @Misc{ATA_2019_Web,
   howpublished = {\url{http://www.atacorp.com/beam_control_subsystems.html}},
   note         = {Accessed: 2019-03-37},
@@ -114,6 +122,20 @@
   school = {University of Notre Dame},
   title  = {{Optical Aberrations Caused by Coherent Structures in a Subsonic, Compressible, Turbulent Boundary Layer}},
   year   = {2010},
+}
+
+@article{DeLucca_2013_OE,
+    author = {Nicholas G. De Lucca and Stanislav V. Gordeyev and Eric J. Jumper},
+    title = {In-flight aero-optics of turrets},
+    volume = {52},
+    journal = {Optical Engineering},
+    number = {7},
+    publisher = {SPIE},
+    pages = {071405},
+    keywords = {Optical engineering, Data acquisition, Electroluminescence, Sensors, Wavefronts, Airborne laser technology, Global Positioning System, Optical benches, Stereolithography, Wavefront sensors},
+    year = {2013},
+    doi = {10.1117/1.OE.52.7.071405},
+    URL = {https://doi.org/10.1117/1.OE.52.7.071405}
 }
 
 @PhdThesis{DeLucca_2016_Dissertation,
@@ -192,6 +214,14 @@
   language = {English},
   pages    = {311},
   url      = {http://proxy.library.nd.edu/login?url=http://search.proquest.com.proxy.library.nd.edu/docview/851882901?accountid=12874},
+}
+
+@book{Duffner-1997-Book,
+    author = {Robert W. Duffner},
+    publisher = {Basic Books},
+    isbn = {9780306456220},
+    year = {1997},
+    title = {Airborne Laser: Bullets of Light},
 }
 
 @article{Duvvuri-2015-JFM,
@@ -630,6 +660,27 @@ publisher = {Addison-Wesley},
 	eprint = {https://arc.aiaa.org/doi/pdf/10.2514/6.2019-3253}
 }
 
+
+
+
+
+
+
+@article{Kalensky-2023-Shocks-AIAAJ,
+    author = {Kalensky, Matthew and Kemnetz, Matthew R. and Spencer, Mark F.},
+    title = {Effects of Shock Waves on Shack–Hartmann Wavefront Sensor Data},
+    journal = {AIAA Journal},
+    volume = {61},
+    number = {6},
+    pages = {2356-2368},
+    year = {2023},
+    doi = {10.2514/1.J062783},
+    URL = {https://doi.org/10.2514/1.J062783}
+}
+
+
+
+
 @inproceedings{Kemnetz-2016-SanDiego,
 	author={Matthew R. Kemnetz and Stanislav Gordeyev},
 	title={Optical investigation of large-scale boundary-layer structures},
@@ -719,6 +770,19 @@ publisher = {Addison-Wesley},
 	author = {Kyrazis, Demos T},
 	keywords = {Airborne Laser ; Beam Control ; Aero-Optics ; Engineering ; Visual Arts ; Physics},
 }
+
+@article{Lynch-2023-AIAAJ,
+    author = {Lynch, Kyle P. and Miller, Nathan E. and Guildenbecher, Daniel R. and Butler, Luke and Gordeyev, Stanislav},
+    title = {Aero-Optical Measurements of a Mach 8 Boundary Layer},
+    journal = {AIAA Journal},
+    volume = {61},
+    number = {3},
+    pages = {991-1001},
+    year = {2023},
+    doi = {10.2514/1.J062363},
+    URL = { https://doi.org/10.2514/1.J062363},
+}
+
 
 @article{Malley-1992-ApplOpt,
 	issn = {0003-6935},
@@ -814,6 +878,19 @@ volume = {197},
   url       = {https://doi.org/10.1117/1.OE.52.7.071417},
 }
 
+
+@article{Porter-2013-AIAAJ,
+    author = {Porter, Chris and Gordeyev, Stanislav and Zenk, Mike and Jumper, Eric},
+    title = {Flight Measurements of the Aero-Optical Environment Around a Flat-Windowed Turret},
+    journal = {AIAA Journal},
+    volume = {51},
+    number = {6},
+    pages = {1394-1403},
+    year = {2013},
+    doi = {10.2514/1.J052067},
+    URL = { https://doi.org/10.2514/1.J052067},
+}
+
 @misc{Ranade-2016-Thesis,
   author={Ranade,Piyush M.},
   year={2016},
@@ -880,6 +957,21 @@ volume = {197},
 	publisher={American Institute of Aeronautics and Astronautics},
 }
 
+@article{Smith-2012-OE,
+    author = {Adam E. Smith},
+    title = {Recent measurements of aero-optical effects caused by subsonic boundary layers},
+    volume = {52},
+    journal = {Optical Engineering},
+    number = {7},
+    publisher = {SPIE},
+    pages = {071404},
+    keywords = {Wavefronts, Wavefront sensors, Contamination, Sensors, Acoustics, Optical engineering, Spatial resolution, Temporal resolution, Velocity measurements, Wavefront distortions},
+    year = {2012},
+    doi = {10.1117/1.OE.52.7.071404},
+    URL = {https://doi.org/10.1117/1.OE.52.7.071404}
+}
+
+
 @PhdThesis{Smith_2015_Thesis,
 	author = {Adam E. Smith},
 	school = {University of Notre Dame},
@@ -931,6 +1023,20 @@ volume = {197},
 	pages={998-1006},
 	abstract={The problem of wave-front estimation from wave-front slope measurements has been examined from a least-squares curve fitting model point of view. It is shown that the slope measurement sampling geometry influences the model selection for the phase estimation. Successive over-relaxation (SOR) is employed to numerically solve the exact zonal phase estimation problem. A new zonal phase gradient model is introduced and its error propagator, which relates the mean-square wave-front error to the noisy slope measurements, has been compared with two previously used models. A technique for the rapid extraction of phase aperture functions is presented. Error propagation properties for modal estimation are evaluated and compared with zonal estimation results.},
 	url={http://www.osapublishing.org/abstract.cfm?URI=josa-70-8-998}
+}
+
+@article{Spencer-IPRG-2016-OptEng,
+    author = {Mark F. Spencer and Robert A. Raynor and Matthias T. Banet and Dan K. Marker},
+    title = {{Deep-turbulence wavefront sensing using digital-holographic detection in the off-axis image plane recording geometry}},
+    volume = {56},
+    journal = {Optical Engineering},
+    number = {3},
+    publisher = {SPIE},
+    pages = {031213},
+    keywords = {wavefront sensing, deep turbulence, atmospheric characterization, adaptive optics, beam control, coherent detection, laser radar, spatial heterodyne interferometry, Signal to noise ratio, Staring arrays, Wavefront sensors, Digital holography, Digital recording, Holograms, Optical engineering, Signal detection, Scintillation, Wave propagation},
+    year = {2016},
+    doi = {10.1117/1.OE.56.3.031213},
+    URL = {https://doi.org/10.1117/1.OE.56.3.031213}
 }
 
 @Article{Squire-2017-JFM,
